<resources>
    <string name="app_name">CadastroAlunos</string>
    <string name="ra">Ra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dtNasc">Dt. Nascimento</string>
    <string name="dtMatricula">Dt. Matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>
    <string name="selecioneCurso">Selecione o Curso</string>
    <string name="selecionePeriodo">Selecione o Período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="cadastrar_aluno">Cadastrar Aluno</string>
    <string name="cadastrar_professor">Cadastrar Professor</string>
    <string name="cadastrar_disciplina">Cadastrar Disciplina</string>
    <string name="cadastrar_turma">Cadastrar Turma</string>
    <string name="dtCadastro">Dt. Cadastro</string>
    <string name="descricao">Descrição</string>
    <string name="regime">Regime</string>
    <string name="selecioneRegime">Selecione o Regime</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="duracao">Duração</string>
    <string name="selecioneDuracao">Selecione a Duração</string>
    <string name="professores">Professores</string>
    <string name="selecioneProfessor">Selecione o Professor</string>
    <string name="disciplina">Disciplina</string>
    <string name="professor">Professor</string>
    <string name="selecioneTurma">Selecione a turma</string>
    <string name="turma">Turma</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="lancar_nota">Lançar Notas</string>
    <string name="cadastros">Cadastros</string>
    <string name="selecioneDisciplina">Selecione a Disciplina</string>
    <string name="nota1">Nota 1</string>
    <string name="nota2">Nota 2</string>
    <string name="nota3">Nota 3</string>
    <string name="nota4">Nota 4</string>
    <string name="frequencia">Frequência</string>
    <string name="conferencia">Conferência</string>
    <string name="notas">Notas</string>
    <string name="notaMedia">Nota Média</string>
    <string name="media">Media</string>
    <string name="resultado">Resultado</string>
</resources>