<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroTurmaActivity">

    <LinearLayout
        android:id="@+id/lnPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/descricao">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDescricaoTurma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spRegime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_floatingLabelText="@string/periodo"
            app:ms_hint="@string/selecioneRegime"
            app:ms_multiline="false" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spPeriodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_floatingLabelText="@string/periodo"
            app:ms_hint="@string/selecionePeriodo"
            app:ms_multiline="false" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extendedfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:onClick="adicionarDisciplinas"
        android:text="@string/disciplinas"
        app:icon="@drawable/ic_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>